--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>吉伊视频 - 登录</title>
-    <link rel="icon" type="image/x-icon" href="https://rack2disk.metacorn.cc/api/public/dl/1hQlpLH5?inline=true">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="login-page">
