--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>吉伊视频</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="/styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/flv.js@1.6.2/dist/flv.min.js"></script>
 </head>
 <body>
@@ -17,7 +17,7 @@
             <button onclick="play()">播放</button>
         </div>
     </div>
-    <script src="/js/player.js"></script>
-    <script src="/js/auth.js"></script>
+    <script src="/scripts/player.js"></script>
+    <script src="/scripts/auth.js"></script>
 </body>
 </html>
