--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>吉伊视频 - 登录</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body class="login-page">
     <div class="login-container">
@@ -12,6 +12,6 @@
         <input type="password" id="password" placeholder="请输入密码">
         <button onclick="login()">登录</button>
     </div>
-    <script src="/js/auth.js"></script>
+    <script src="/scripts/auth.js"></script>
 </body>
 </html>
