--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>吉伊视频</h1>
         <video id="videoPlayer" controls></video>
         <div class="controls">
-            <input type="text" id="streamUrl" placeholder="输入播放地址 (flv/rtmp/m3u8)" value="https://live2.metacorn.cc/hdl/live/win/a9382d37-6887-4bea-be14-9f37abd5617e.flv">
+            <input type="text" id="streamUrl" placeholder="输入播放地址 (flv/rtmp/m3u8)">
             <button onclick="play()">播放</button>
         </div>
     </div>
