--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/flv.js@1.6.2/dist/flv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jessibuca@2.3.0/dist/jessibuca.js"></script>
 </head>
 <body>
     <button class="logout" onclick="logout()">退出登录</button>
