--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>吉伊视频</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://cdn.jsdelivr.net/npm/flv.js@1.6.2/dist/flv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mpegts.js@1.7.3/dist/mpegts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jessibuca@2.3.0/dist/jessibuca.js"></script>
 </head>
 <body>
