--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>吉伊视频</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://cdn.jsdelivr.net/npm/xgplayer@3.0.11/dist/index.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/xgplayer-flv@3.0.11/dist/index.min.js"></script>
+    <script src="https://unpkg.com/xgplayer@3.0.11/dist/index.min.js"></script>
+    <script src="https://unpkg.com/xgplayer-flv.js@3.0.11/dist/index.min.js"></script>
 </head>
 <body>
     <button class="logout" onclick="logout()">退出登录</button>
