--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>吉伊视频</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://unpkg.com/xgplayer@3.0.11/dist/index.min.js" type="text/javascript"></script>
-    <script src="https://unpkg.com/xgplayer-flv@3.0.11/dist/index.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xgplayer@3.0.11/dist/index.min.js" charset="utf-8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xgplayer-flv@3.0.11/dist/index.min.js" charset="utf-8"></script>
 </head>
 <body>
     <button class="logout" onclick="logout()">退出登录</button>
     <div class="container">
         <h1>吉伊视频</h1>
-        <video id="videoPlayer" controls></video>
+        <div id="videoPlayer"></div>
         <div class="controls">
             <input type="text" id="streamUrl" placeholder="输入播放地址 (flv/rtmp/m3u8)">
             <button onclick="play()">播放</button>
