--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <title>吉伊视频</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://cdn.jsdelivr.net/npm/xgplayer@3.0.11/dist/index.min.js" charset="utf-8"></script>
-    <script src="https://cdn.jsdelivr.net/npm/xgplayer-flv@3.0.11/dist/index.min.js" charset="utf-8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xgplayer@3.0.11/dist/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xgplayer-flv@3.0.11/dist/index.min.js"></script>
+    <script>
+        if (window.xgplayer) {
+            console.log('xgplayer loaded');
+            console.log('plugins:', window.xgplayerPluginFlv);
+        }
+    </script>
 </head>
 <body>
     <button class="logout" onclick="logout()">退出登录</button>
