--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <title>吉伊视频</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://cdn.jsdelivr.net/npm/flv.js@1.6.2/dist/flv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flv.js@1.6.2/dist/flv.min.js" type="text/javascript"></script>
+    <script>
+        // 检查 flv.js 是否加载成功
+        window.addEventListener('load', function() {
+            if (window.flvjs) {
+                console.log('flv.js loaded successfully');
+            } else {
+                console.error('flv.js failed to load');
+            }
+        });
+    </script>
 </head>
 <body>
     <button class="logout" onclick="logout()">退出登录</button>
