--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>吉伊视频</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/styles/main.css">
@@ -9,6 +10,18 @@
     <script src="https://cdn.jsdelivr.net/npm/flv.js@1.6.2/dist/flv.min.js" type="text/javascript"></script>
     <script src="https://vjs.zencdn.net/8.5.2/video.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/videojs-flvjs-es6@1.0.1/dist/videojs-flvjs.min.js"></script>
+    <style>
+        .video-container {
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
+            aspect-ratio: 16/9;
+        }
+        .video-js {
+            width: 100% !important;
+            height: 100% !important;
+        }
+    </style>
     <script>
         // 检查 flv.js 是否加载成功
         window.addEventListener('load', function() {
@@ -24,7 +37,9 @@
     <button class="logout" onclick="logout()">退出登录</button>
     <div class="container">
         <h1>吉伊视频</h1>
-        <video id="videoPlayer" class="video-js vjs-default-skin" controls></video>
+        <div class="video-container">
+            <video id="videoPlayer" class="video-js vjs-default-skin" controls playsinline webkit-playsinline></video>
+        </div>
         <div class="controls">
             <input type="text" id="streamUrl" placeholder="输入播放地址 (flv/rtmp/m3u8)">
             <button onclick="play()">播放</button>
