--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/flv.js@1.6.2/dist/flv.min.js"></script>
     <!-- iOS设备使用xgplayer -->
     <script src="https://cdn.jsdelivr.net/npm/xgplayer@3.0.11/dist/index.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@xgplayer/streaming-media@3.0.11/dist/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@xgplayer/flv@3.0.11/dist/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@xgplayer/decoder-flv@3.0.11/dist/index.min.js"></script>
     <style>
         .video-container {
             width: 100%;
